corrected overlapping issue and updated nav

--- a/frontend/src/pages/HomePage/index.css
+++ b/frontend/src/pages/HomePage/index.css
@@ -59,7 +59,7 @@ body {
 .icons {
   color: white;
   text-align: center;
-  position: absolute;
+  position: relative;
   bottom: 0;
   left: 50%; 
   transform: translateX(-50%);
@@ -81,5 +81,16 @@ body {
   margin-top:50px;
   font-size: 30px;
 }
+
+.content-container {
+  text-align: center;
+  margin-bottom: auto;
+}
+
+.skills-icons {
+  text-align: center;
+  margin-top: 20px;
+}
+
 .ml1 .line1 { top: 0; }
 .ml1 .line2 { bottom: 0; }
